--- a/errorhandling/try_catch_finally.html
+++ b/errorhandling/try_catch_finally.html
@@ -4,7 +4,7 @@
       <script type = "text/javascript">
          <!--
             function myFunc() {
-               var a = 100;
+               var b = 100;
                
                try {
                   alert("Value of variable a is : " + a );
