--- a/json/json_from_server_ajax.html
+++ b/json/json_from_server_ajax.html
@@ -15,11 +15,11 @@ xmlhttp.onreadystatechange = function() {
     document.getElementById("demo").innerHTML = myObj.name;
   }
 };
-xmlhttp.open("GET", "https://raw.githubusercontent.com/NandhiniRamesh5555/CCP_AWS_FULL_STACK_TEMPLATE/master/db.json", true);
+xmlhttp.open("GET", "https://raw.githubusercontent.com/NandhiniRamesh5555/javascript/master/json/sample%20json%20data.json", true);
 xmlhttp.send();
 </script>
 
-<p>Take a look at <a href="https://raw.githubusercontent.com/NandhiniRamesh5555/CCP_AWS_FULL_STACK_TEMPLATE/master/db.json" target="_blank">json_demo.txt</a></p>
+<p>Take a look at <a href="https://raw.githubusercontent.com/NandhiniRamesh5555/javascript/master/json/sample%20json%20data.json" target="_blank">json_demo.txt</a></p>
 
 </body>
 </html>
